--- a/src/main/resources/templates/views/opn/usr/OPNUSR003M0.html
+++ b/src/main/resources/templates/views/opn/usr/OPNUSR003M0.html
@@ -106,7 +106,7 @@
 				gf_Transaction(option, fn_callback );
 			}
 	
-			function insertCs(addedRow) {
+			function fn_insertUsr(addedRow) {
 				var option = {
 						   id          : "insertList"
 					     , type        : "post"
@@ -120,7 +120,7 @@
 				gf_Transaction(option, fn_callback );
 			}
 	
-			function fn_updateCs(input) {
+			function fn_updateUsr(input) {
 				console.log("updateCs input : " + input);
 				var option = {
 						   id          : "updateList"
@@ -186,7 +186,7 @@
 			var dataView;
 			var data;
 			var unqId = "seqNo";
-			var xcpt_cols = ["seqNo","usrEmail","oldStatDvCd"];
+			var xcpt_cols = ["seqNo","oldUsrId","usrEmail","oldStatDvCd"];
 			var check_cols = ["usrId"];
 			
 			var usrDvCdList  = { 1:"System Operator"
@@ -202,6 +202,7 @@
 						, { id: "compNm",			name: "company name",			field: "compNm",			sortable: true, width: 150, editor: Slick.Editors.Text, validator: createValidator }
 						, { id: "usrDvCd",			name: "user identifier code",	field: "usrDvCd",			sortable: true, width: 100, editor: gf_Select2Editor  , formatter: gf_Select2Formatter, dataSource: usrDvCdList }
 						, { id: "usrId",			name: "user email",	 			field: "usrId",				sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator }
+						, { id: "oldUsrId",			name: "user email",	 			field: "oldUsrId",			sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator, hidden:true }
 						, { id: "usrNm",			name: "user name",	 			field: "usrNm",				sortable: true, width: 120, editor: Slick.Editors.Text, validator: createValidator }
 						, { id: "usrEmail",			name: "user email",				field: "usrEmail",			sortable: true, width: 100, editor: Slick.Editors.Text, validator: createValidator, hidden:true }
 						, { id: "usrPhNo",			name: "user phone number",		field: "usrPhNo",			sortable: true, width: 100, editor: Slick.Editors.Text, validator: createValidator }
@@ -311,8 +312,9 @@
 				
 			}
 			
-			function fn_setGrid(data){
-	
+			function fn_setGrid(rData){
+		
+				data     = rData;
 				dataView = new Slick.Data.DataView({ idField: unqId });
 				grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
 	
@@ -428,9 +430,9 @@
 				let hiddenColumns;
 				
 				if (modalType === "create") {
-					hiddenColumns = ["seqNo","compNm","usrEmail","oldStatDvCd","passwordUpdDtm"];
+					hiddenColumns = ["seqNo","compNm","oldUsrId","usrEmail","oldStatDvCd","passwordUpdDtm"];
 				} else {
-					hiddenColumns = ["seqNo","csNo","compNm","usrEmail","oldStatDvCd","passwordUpdDtm"];  // 예: 'csNo' 컬럼 숨기기
+					hiddenColumns = ["seqNo","csNo","compNm","oldUsrId","usrEmail","oldStatDvCd","passwordUpdDtm"];  // 예: 'csNo' 컬럼 숨기기
 				}
 				
 				let selUsrDvCd = [
@@ -490,7 +492,7 @@
 				}
 				// Dynamically create form elements based on the columns that have editors
 				const modalColumns = columns.filter(col => col.editor && !hiddenColumns.includes(col.id));
-	
+
 				const columnsPerShow = 6;
 				let currentRow;
 
@@ -743,7 +745,7 @@
 				saveBtn.onclick = function saveHandler(){
 				
 					const formData = {};
-	
+
 					// Collect form data
 					modalColumns.forEach(column => {
 						const input = modalBodyElem.querySelector(`[data-editorid="${column.id}"]`);
@@ -751,20 +753,23 @@
 							formData[column.field] = input.value.trim();
 						}
 					});
-					
-					if (modalType === "edit") {
+
+					console.log("modalColumns2 :", modalColumns);
+					console.log("hiddenColumns :", hiddenColumns);
 					// 숨겨진 컬럼의 데이터도 수집
+					if (modalType === "edit") {
 				        hiddenColumns.forEach(hiddenColId => {
 				            formData[hiddenColId] = dataContext[hiddenColId]; // 숨겨진 컬럼의 값을 기존 데이터에서 가져옴
 				        });
 					}
-					
+
+					console.log("befor formData:", formData);
 					if (modalType === "create") {
 						// Add new item to grid data
 						if (checkData(formData)) {
 							//formData[unqId] = grid.getDataLength() + 1;
 							//dataView.insertItem(grid.getDataLength(), formData);
-							insertCs(JSON.stringify(formData));
+							fn_insertUsr(JSON.stringify(formData));
 
 						} else {
 							alert("Please fill out all required fields.");
@@ -782,9 +787,9 @@
 	
 						if (isChanged) {
 							formData[unqId] = originalData[unqId];
-							console.log("fn_updateCs befor formData:", formData);
+							console.log("fn_updateUsr befor formData:", formData);
 							//dataView.updateItem(originalData[unqId], formData);
-							fn_updateCs(JSON.stringify(formData));
+							fn_updateUsr(JSON.stringify(formData));
 						} else {
 							alert("No changes detected.");
 							return;
