--- a/src/main/resources/templates/views/user/newCompany.html
+++ b/src/main/resources/templates/views/user/newCompany.html
@@ -36,7 +36,7 @@
 
 					<div class="card-body">
 						<h2 class="card-title text-center mb-4">Sign up for a new contract</h2>
-						<p class="text-secondary text-center mb-6">Once you fill out the form below and submit it, we will contact you soon after checking the information.</p>
+						<p class="text-secondary text-center mb-6">Once you fill out the form below and submit it, we will contact you shortly after checking the information.</p>
        
 						<div class="hr-text" style="font-size: 1em;">Company Information</div>
 
