--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -94,14 +94,19 @@
             $("#userId").focus();
     		return;
     	}
-    	
+
+        // 이메일 형식이 올바르지 않은 경우
+        if (!validateEmail(vUsrId)) {
+            alert("Incorrect e-mail address. Please enter it again."); // 오류 메시지 표시
+            $("#userId").focus();
+            return;
+        }
+
     	if ( isNull(vUsrPhNo) == "" ) {
             alert("Enter your phone number.");
             $("#userPhone").focus();
     		return;
     	}
-    	
-    	
     	
     	const requestData = {
               compNoDvCd : vCompNoDvCd
@@ -120,7 +125,7 @@
             success: function (data) {
                 
             	//alert("비밀번호 초기화 신청이 완료되었습니다. 이메일로 임시 비밀번호가 전송됩니다.");
-                alert("Your password has been reset successfully. Please check your e-mail and log in.");
+                alert("Your request has been sent successfully. Please check your e-mail in a few minutes.");
 
 				console.log("AJAX request successful. Data received:", data);
 				
