--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -139,21 +139,64 @@
         return parentCheckData(data, check_cols);
       }
 
-      function getFile(input) {
-        return parentGetFile(input, "/BIZJNL001M0SelectList");
+      function getList(input) {
+          console.log("getList input : " + input);
+          var option = {
+                         id          : "SelectList"
+                       , type        : "post"
+                       , url         : "/BIZJNL001M0SelectList"
+                       , async       : false
+                       , dataType    : "json"
+                       , contentType : "application/json; charset=utf-8"
+                       , data        : input
+                       };
+          
+          gf_Transaction(option, fn_callback);
+      }
+      
+      function insertList(addedRow) {
+          var option = {
+                     id          : "insertList"
+                   , type        : "post"
+                   , url         : "/BIZJNL001M0InsertList"
+                   , async       : false
+                   , dataType    : "text"
+                   , contentType : "application/json; charset=utf-8"
+                   , data        : addedRow
+                   };
+      
+          gf_Transaction(option, fn_callback);
+      }
+      
+      function updateList(input) {
+          console.log("updateList input : " + input);
+          var option = {
+                     id          : "updateList"
+                   , type        : "post"
+                   , url         : "/BIZJNL001M0UpdateList"
+                   , async       : true
+                   , dataType    : "text"
+                   , contentType : "application/json; charset=utf-8"
+                   , data        : input
+                   };
+      
+          gf_Transaction(option, fn_callback);
       }
 
-      function insertFile(addedRow) {
-        parentInsertFile(addedRow, "/BIZJNL001M0InsertList");
-      }
-
-      function updateFile(updatedRow) {
-        parentUpdateFile(updatedRow, "/BIZJNL001M0UpdateList");
-      }
-
-      function deleteFile(todeleteRow) {
-        parentDeleteFile(todeleteRow, "/BIZJNL001M0DeleteList");
-      }
+      function deleteList(todeleteRow) {
+          console.log("deleteList input : " + input);
+          var option = {
+                     id          : "deleteList"
+                   , type        : "post"
+                   , url         : "/BIZJNL001M0DeleteList"
+                   , async       : true
+                   , dataType    : "text"
+                   , contentType : "application/json; charset=utf-8"
+                   , data        : input
+                   };
+      
+          gf_Transaction(option, fn_callback);
+      }      
     </script>
     <script>
       $(document).ready(function () {
@@ -200,14 +243,14 @@
       var grid;
       var dataView;
       var data;
-      var unqId = "atitCd";
+      var unqId = "rowNumber";
       var xcpt_cols = ["regUsrid", "regDt"];
       var check_cols = [unqId, "atitKorNm"];
       var columns = [
         {
-          id: unqId,
+          id: "atitCd",
           name: "account title",
-          field: unqId,
+          field: "atitCd",
           sortable: true,
           editor: Slick.Editors.Text,
           validator: createValidator,
@@ -417,131 +460,166 @@
       };
 
       function addSlickGridSomeStyling() {
-        const style = document.createElement("style");
-        style.innerHTML = `
-            .slick-header-columns {
-              font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-              font-size: 13px;
-            }
-            .slick-cell {
-              font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
-              font-size: 13px;
-            }
-          `;
-        document.head.appendChild(style);
-      }
-
-      function main() {
-        addSlickGridSomeStyling();
-        // 그리드 초기화 및 데이터 로드
-        console.log("Initializing SlickGrid...");
-        data = getFile(
-          (input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
-        );
-
-        dataView = new Slick.Data.DataView();
-        grid = new Slick.Grid("#divMyGrid", dataView, columns, options);
-
-        // Make the grid respond to DataView change events.
-        dataView.onRowCountChanged.subscribe(function (e, args) {
-          grid.updateRowCount();
-          grid.render();
-        });
-
-        dataView.onRowsChanged.subscribe(function (e, args) {
-          grid.invalidate();
-          grid.render();
-        });
-
-        // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
-        dataView.setItems(data, unqId);
-
-        // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-        grid.onBeforeSort.subscribe(function (e, args) {
-          return true;
-        });
-
-        // 정렬
-        grid.onSort.subscribe(function (e, args) {
-          var cols = args.sortCols;
-
-          data.sort(function (dataRow1, dataRow2) {
-            for (var i = 0, l = cols.length; i < l; i++) {
-              var field = cols[i].sortCol.field;
-              var sign = cols[i].sortAsc ? 1 : -1;
-              var value1 = dataRow1[field],
-                value2 = dataRow2[field];
-              var result =
-                (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
-              if (result != 0) {
-                return result;
-              }
-            }
-            return 0;
-          });
-
-          grid.render();
-        });
-
-        grid.setSelectionModel(new Slick.CellSelectionModel());
-        grid.registerPlugin(new Slick.AutoTooltips());
-
-        // set keyboard focus on the grid
-        //grid.getCanvasNode().focus();
-        grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
-
-        grid.onAddNewRow.subscribe(function (e, args) {
-          var newItem = args.item;
-          var column = args.column;
-          dataView.beginUpdate();
-          dataView.setItems(data);
-          dataView.endUpdate();
-          grid.updateRowCount();
-          grid.render();
-        });
-
-        grid.onBeforeEditCell.subscribe(function (e, args) {
-          console.log("onBeforeEditCell");
-        });
-
-        grid.onCellChange.subscribe(function (e, args) {
-          dataView.beginUpdate();
-          dataView.setItems(data);
-          dataView.endUpdate();
-          grid.updateRowCount();
-          grid.render();
-        });
-
-        grid.onValidationError.subscribe(function (e, args) {
-          // handle validation errors originating from the CompositeEditor
-          if (args.validationResults) {
-            let errorMsg = args.validationResults.msg || "";
-            if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-              if (args.validationResults.errors) {
-                errorMsg += "\n";
-                args.validationResults.errors.forEach(function (
-                  error,
-                  errorIndex
-                ) {
-                  const columnName = error.editor.args.column.id;
-                  errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-                });
-              }
-              console.log(errorMsg);
-            }
-          } else {
-            alert(errorMessages);
+            const style = document.createElement("style");
+            style.innerHTML = `
+                .slick-header-columns {
+                  font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+                  font-size: 13px;
+                }
+                .slick-cell {
+                  font-family: San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+                  font-size: 13px;
+                }
+              `;
+            document.head.appendChild(style);
           }
-        });
+    
+          function main() {
+              addSlickGridSomeStyling();
+              // 그리드 초기화 및 데이터 로드
+              console.log("Initializing SlickGrid...");
+              getList(
+                          (input = JSON.stringify({ 
+                                                    searchTxt: $("#inpSearchTxt").val()
+                          }))
+                     );
+          }
 
-        grid.setActiveCell(0, 0);
-        console.log("SlickGrid initialized.");
-      }
+            /**
+             * Transaction callback 함수
+            **/
+            function fn_callback(result){
+                console.log("fn_callback : " + result.id);
+                if( result.resultCd == "S" ){
+                    
+                    switch (result.id){
+                        case "SelectList" :
+                            
+                            fn_setGrid(result.data);
+                            
+                        break;
+                        case "insertList" :
+
+                            main();
+                        break;
+                        case "updateList" :
+
+                            main();
+                        break;
+                        case "deleteList" :
+
+                            main();
+                        break;
+                    }
+                } else if( result.resultCd == "E") {
+                    
+                } else {
+                    console.log("fn_callback result : ", result);
+                }
+            }
+
+            function fn_setGrid(data){
+                
+                dataView = new Slick.Data.DataView( { idField: unqId });
+                grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
+                
+                // Make the grid respond to DataView change events.
+                dataView.onRowCountChanged.subscribe(function (e, args) {
+                    grid.updateRowCount();
+                    grid.render();
+                });
+                
+                dataView.onRowsChanged.subscribe(function (e, args) {
+                    grid.invalidate();
+                    grid.render();
+            });
+                        
+            // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
+            dataView.setItems(data, unqId);
+            
+            // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
+            grid.onBeforeSort.subscribe(function (e, args) {
+                return true;
+            });                   
+          
+            // 정렬
+         grid.onSort.subscribe(function (e, args) {
+            var cols = args.sortCols;
+
+            data.sort(function (dataRow1, dataRow2) {
+               for (var i = 0, l = cols.length; i < l; i++) {
+                    var field  = cols[i].sortCol.field;
+                    var sign   = cols[i].sortAsc ? 1 : -1;
+                    var value1 = dataRow1[field],
+                        value2 = dataRow2[field];
+                    var result =
+                    (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
+                  if (result != 0) {
+                    return result;
+                  }
+                }
+                return 0;
+              });
+              grid.render();
+            });
+
+            grid.setSelectionModel(new Slick.CellSelectionModel());
+            grid.registerPlugin(new Slick.AutoTooltips());
+
+            // set keyboard focus on the grid
+            //grid.getCanvasNode().focus();
+            grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+
+            grid.onAddNewRow.subscribe(function (e, args) {
+              var newItem = args.item;
+              var column = args.column;
+              dataView.beginUpdate();
+              dataView.setItems(data);
+              dataView.endUpdate();
+              grid.updateRowCount();
+              grid.render();
+            });
+
+            grid.onBeforeEditCell.subscribe(function (e, args) {
+              console.log("onBeforeEditCell");
+            });
+
+              grid.onCellChange.subscribe(function (e, args) {
+                  dataView.beginUpdate();
+                  dataView.setItems(data);
+                  dataView.endUpdate();
+                  grid.updateRowCount();
+                  grid.render();
+              });
+
+            grid.onValidationError.subscribe(function (e, args) {
+              // handle validation errors originating from the CompositeEditor
+              if (args.validationResults) {
+                let errorMsg = args.validationResults.msg || "";
+                if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+                  if (args.validationResults.errors) {
+                    errorMsg += "\n";
+                    args.validationResults.errors.forEach(function (
+                      error,
+                      errorIndex
+                    ) {
+                      const columnName = error.editor.args.column.id;
+                      errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+                    });
+                  }
+                  console.log(errorMsg);
+                }
+              } else {
+                alert(errorMessages);
+              }
+            });
+
+            grid.setActiveCell(0, 0);
+            console.log("SlickGrid initialized.");
+       }
 
       // Download Excel functionality
-      document
-        .getElementById("downloadExcel")
-        .addEventListener("click", function () {
+      document.getElementById("downloadExcel").addEventListener("click", function () {
           const currDate = getCurrentDateTime();
           const fileName = "BIZJNL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
           const sheetName = "계정과목관리"; // 시트 이름
@@ -762,32 +840,35 @@
 
         // Save button logic
         const saveBtn = document.querySelector(".modal-footer .btn-primary");
-        saveBtn.removeEventListener("click", saveHandler);
-        saveBtn.addEventListener("click", saveHandler);
+        saveBtn.textContent = modalType === "create" ? "Create" : "Save changes";
+    
+        //modal을 마우스로 드래그가능하도록 설정
+        $(".modal").draggable();
 
-        // saveBtn.textContent = modalType === "create" ? "Create" : "Save changes";
-        function saveHandler() {
+        // this will only be triggered when the save button is clicked
+        saveBtn.onclick = function saveHandler() {
+            console.log("Save");
           const formData = {};
 
           // Collect form data
           modalColumns.forEach((column) => {
-            const input = modalBodyElem.querySelector(`[data-editorid="${column.id}"]`);
+              console.log("Save2");
+            const input = modalBodyElem.querySelector(
+              `[data-editorid="${column.id}"]`
+            );
             if (input) {
               formData[column.field] = input.value.trim();
             }
           });
-
+          
           if (modalType === "create") {
             // Add new item to grid data
-            console.log("create");
             if (checkData(formData)) {
-              //formData[unqId] = grid.getDataLength() + 1;
-              dataView.insertItem(grid.getDataLength(), formData);
-              
+              formData[unqId] = grid.getDataLength() + 1;
+              //dataView.insertItem(grid.getDataLength(), formData);
               if(confirm("Do you want to register?") == true){
-	              insertFile(formData);
-	              location.reload(true);
-	              //console.log(formData);
+
+                  insertList(JSON.stringify(formData));
               }
             } else {
               alert("Please fill out all required fields.");
@@ -805,12 +886,10 @@
 
             if (isChanged) {
               formData[unqId] = originalData[unqId];
-              dataView.updateItem(originalData[unqId], formData);
+              //dataView.updateItem(originalData[unqId], formData);
               if(confirm("Do you want to modify?") == true){
-              	updateFile(formData);
+              updateList(JSON.stringify(formData));
               }
-              location.reload(true);
-              
             } else {
               alert("No changes detected.");
               return;
