--- a/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT002M0.html
@@ -42,34 +42,12 @@
                   </div>
                   <div class="col text-end">
                     <button
-                      form="new-form"
-                      type="button"
-                      class="btn btn-primary"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('create');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-                      data-test="create-button"
-                      onsubmit="return false;"
-                    >
-                      Create
-                    </button>
-                    <button
                       type="button"
                       class="btn btn-lime"
                       style="padding: 4px 10px; color: white; font-size: 13px"
                       id="downloadExcel"
                     >
                       Download
-                    </button>
-                    <button
-                      form="new-form"
-                      type="button"
-                      class="btn btn-secondary"
-                      style="padding: 4px 10px; color: white; font-size: 13px"
-                      onclick="renewOptions(true);openDetails('edit');{(ev) => {if (ev.detail === 0) {ev.preventDefault();}}}"
-                      data-test="edit-button"
-                      onsubmit="return false;"
-                    >
-                      Edit
                     </button>
                   </div>
                 </div>
@@ -138,9 +116,20 @@
         return parentCheckData(data, check_cols);
       }
 
-      function getFile(input) {
-        return parentGetFile(input, "/WRKBAT002M0SelectList");
-      }
+      function getList(input) {
+          console.log("getList input : " + input);
+          var option = {
+                         id          : "SelectList"
+                       , type        : "post"
+                       , url         : "/WRKBAT001M0SelectList"
+                       , async       : false
+                       , dataType    : "json"
+                       , contentType : "application/json; charset=utf-8"
+                       , data        : input
+                       };
+          
+          gf_Transaction(option, fn_callback);
+      }      
     </script>
     <script>
       $(document).ready(function () {
@@ -304,287 +293,159 @@
       }
 
       function main() {
-        addSlickGridSomeStyling();
-        // 그리드 초기화 및 데이터 로드
-        console.log("Initializing SlickGrid...");
-        data = getFile(
-          (input = JSON.stringify({ searchTxt: $("#inpSearchTxt").val() }))
-        );
-
-        dataView = new Slick.Data.DataView();
-        grid = new Slick.Grid("#divMyGrid", dataView, columns, options);
-
-        // Make the grid respond to DataView change events.
-        dataView.onRowCountChanged.subscribe(function (e, args) {
-          grid.updateRowCount();
-          grid.render();
-        });
-
-        dataView.onRowsChanged.subscribe(function (e, args) {
-          grid.invalidate();
-          grid.render();
-        });
-
-        // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
-        dataView.setItems(data, unqId);
-
-        // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
-        grid.onBeforeSort.subscribe(function (e, args) {
-          return true;
-        });
-
-        // 정렬
-        grid.onSort.subscribe(function (e, args) {
-          var cols = args.sortCols;
-
-          data.sort(function (dataRow1, dataRow2) {
-            for (var i = 0, l = cols.length; i < l; i++) {
-              var field = cols[i].sortCol.field;
-              var sign = cols[i].sortAsc ? 1 : -1;
-              var value1 = dataRow1[field],
-                value2 = dataRow2[field];
-              var result =
-                (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
-              if (result != 0) {
-                return result;
-              }
-            }
-            return 0;
-          });
-
-          grid.render();
-        });
-
-        grid.setSelectionModel(new Slick.CellSelectionModel());
-        grid.registerPlugin(new Slick.AutoTooltips());
-
-        // set keyboard focus on the grid
-        //grid.getCanvasNode().focus();
-        grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
-
-        grid.onAddNewRow.subscribe(function (e, args) {
-          var newItem = args.item;
-          var column = args.column;
-          dataView.beginUpdate();
-          dataView.setItems(data);
-          dataView.endUpdate();
-          grid.updateRowCount();
-          grid.render();
-        });
-
-        grid.onBeforeEditCell.subscribe(function (e, args) {
-          console.log("onBeforeEditCell");
-        });
-
-        grid.onCellChange.subscribe(function (e, args) {
-          dataView.beginUpdate();
-          dataView.setItems(data);
-          dataView.endUpdate();
-          grid.updateRowCount();
-          grid.render();
-        });
-
-        grid.onValidationError.subscribe(function (e, args) {
-          // handle validation errors originating from the CompositeEditor
-          if (args.validationResults) {
-            let errorMsg = args.validationResults.msg || "";
-            if (args.editor && args.editor instanceof Slick.CompositeEditor) {
-              if (args.validationResults.errors) {
-                errorMsg += "\n";
-                args.validationResults.errors.forEach(function (
-                  error,
-                  errorIndex
-                ) {
-                  const columnName = error.editor.args.column.id;
-                  errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
-                });
-              }
-              console.log(errorMsg);
-            }
-          } else {
-            alert(errorMessages);
-          }
-        });
-
-        grid.setActiveCell(0, 0);
-        console.log("SlickGrid initialized.");
+          addSlickGridSomeStyling();
+          // 그리드 초기화 및 데이터 로드
+          console.log("Initializing SlickGrid...");
+          getList(
+                      (input = JSON.stringify({ 
+                                                searchTxt: $("#inpSearchTxt").val()
+                      }))
+                 );
       }
 
+            /**
+             * Transaction callback 함수
+            **/
+            function fn_callback(result){
+                console.log("fn_callback : " + result.id);
+                if( result.resultCd == "S" ){
+                    
+                    switch (result.id){
+                        case "SelectList" :
+                            
+                            fn_setGrid(result.data);
+                            
+                        break;
+                        case "insertList" :
+
+                            main();
+                        break;
+                        case "updateList" :
+
+                            main();
+                        break;
+                        case "deleteList" :
+
+                            main();
+                        break;
+                    }
+                } else if( result.resultCd == "E") {
+                    
+                } else {
+                    console.log("fn_callback result : ", result);
+                }
+            }
+
+            function fn_setGrid(data){
+                
+                dataView = new Slick.Data.DataView( { idField: unqId });
+                grid     = new Slick.Grid("#divMyGrid", dataView, columns, options);
+                
+                // Make the grid respond to DataView change events.
+                dataView.onRowCountChanged.subscribe(function (e, args) {
+                    grid.updateRowCount();
+                    grid.render();
+                });
+                
+                dataView.onRowsChanged.subscribe(function (e, args) {
+                    grid.invalidate();
+                    grid.render();
+            });
+                        
+            // setItems의 두번째 argument를 통해 unique id에 해당하는 컬럼 지정가능
+            dataView.setItems(data, unqId);
+            
+            // when "onBeforeSort" returns false, the "onSort" won't execute (for example a backend server error while calling backend query to sort)
+            grid.onBeforeSort.subscribe(function (e, args) {
+                return true;
+            });                   
+          
+            // 정렬
+         grid.onSort.subscribe(function (e, args) {
+            var cols = args.sortCols;
+
+            data.sort(function (dataRow1, dataRow2) {
+               for (var i = 0, l = cols.length; i < l; i++) {
+                    var field  = cols[i].sortCol.field;
+                    var sign   = cols[i].sortAsc ? 1 : -1;
+                    var value1 = dataRow1[field],
+                        value2 = dataRow2[field];
+                    var result =
+                    (value1 == value2 ? 0 : value1 > value2 ? 1 : -1) * sign;
+                  if (result != 0) {
+                    return result;
+                  }
+                }
+                return 0;
+              });
+              grid.render();
+            });
+
+            grid.setSelectionModel(new Slick.CellSelectionModel());
+            grid.registerPlugin(new Slick.AutoTooltips());
+
+            // set keyboard focus on the grid
+            //grid.getCanvasNode().focus();
+            grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
+
+            grid.onAddNewRow.subscribe(function (e, args) {
+              var newItem = args.item;
+              var column = args.column;
+              dataView.beginUpdate();
+              dataView.setItems(data);
+              dataView.endUpdate();
+              grid.updateRowCount();
+              grid.render();
+            });
+
+            grid.onBeforeEditCell.subscribe(function (e, args) {
+              console.log("onBeforeEditCell");
+            });
+
+              grid.onCellChange.subscribe(function (e, args) {
+                  dataView.beginUpdate();
+                  dataView.setItems(data);
+                  dataView.endUpdate();
+                  grid.updateRowCount();
+                  grid.render();
+              });
+
+            grid.onValidationError.subscribe(function (e, args) {
+              // handle validation errors originating from the CompositeEditor
+              if (args.validationResults) {
+                let errorMsg = args.validationResults.msg || "";
+                if (args.editor && args.editor instanceof Slick.CompositeEditor) {
+                  if (args.validationResults.errors) {
+                    errorMsg += "\n";
+                    args.validationResults.errors.forEach(function (
+                      error,
+                      errorIndex
+                    ) {
+                      const columnName = error.editor.args.column.id;
+                      errorMsg += `${columnName.toUpperCase()}: ${error.msg}`;
+                    });
+                  }
+                  console.log(errorMsg);
+                }
+              } else {
+                alert(errorMessages);
+              }
+            });
+
+            grid.setActiveCell(0, 0);
+            console.log("SlickGrid initialized.");
+       }
+
       // Download Excel functionality
-      document
-        .getElementById("downloadExcel")
-        .addEventListener("click", function () {
+      document.getElementById("downloadExcel").addEventListener("click", function () {
           const currDate = getCurrentDateTime();
-          const fileName = "WRKFIL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
-          const sheetName = "파일관리"; // 시트 이름
+          const fileName = "WRKBAT002_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
+          const sheetName = "Job Runs"; // 시트 이름
           const gridColumns = columns; // SlickGrid의 컬럼 배열
           const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
           exportToExcel(fileName, sheetName, gridColumns, gridData);
         });
 
-      function openDetails(modalType) {
-        grid.render();
-
-        let originalData = null;
-
-        if (
-          grid.getEditorLock().isActive() &&
-          !grid.getEditorLock().commitCurrentEdit()
-        ) {
-          return;
-        }
-
-        if (modalType === "create") {
-          grid.setActiveCell(grid.getDataLength(), 0);
-        }
-
-        var activeCell = grid.getActiveCell();
-        var activeRow = (activeCell && activeCell.row) || 0;
-
-        if (!options.enableCellNavigation) {
-          throw new Error(
-            'Composite Editor requires the flag "enableCellNavigation" to be set to True in your Grid Options.'
-          );
-        } else if (!activeCell && modalType === "edit") {
-          throw new Error("No records selected for edit operation");
-        }
-
-        const dataContext = grid.getDataItem(activeRow);
-        const modalElement = new bootstrap.Modal(
-          document.getElementById("exampleModal")
-        );
-        const modalTitleElem = document.querySelector(".modal-title");
-        const modalBodyElem = document.querySelector(".modal-body");
-        console.log("modalTitleElem:", modalTitleElem);
-
-        modalBodyElem.innerHTML = ""; // Clear previous content
-
-        // Define the modal title based on action
-        if (modalTitleElem) {
-          if (modalType === "create") {
-            modalTitleElem.textContent = "NEW";
-            // modalTitleElem.className = "mb-3";
-          } else if (modalType === "edit") {
-            modalTitleElem.textContent = "EDIT";
-            originalData = JSON.parse(JSON.stringify(dataContext)); // Save original data for comparison
-          }
-        } else {
-          console.error("error while loading the moda title: ");
-        }
-        renewOptions(false);
-
-        // Dynamically create form elements based on the columns that have editors
-        const modalColumns = columns.filter((col) => col.editor);
-
-        const columnsPerShow = 6;
-        let currentRow;
-
-        // take the modal body
-
-        modalColumns.forEach((column, index) => {
-          // we create new row after 6 columms,
-          if (index % columnsPerShow === 0) {
-            currentRow = document.createElement("div");
-            currentRow.className = "row";
-            modalBodyElem.appendChild(currentRow);
-          }
-
-          const colElem = document.createElement("div");
-          colElem.className = "col-lg-6";
-
-          const formGroupElem = document.createElement("div");
-          formGroupElem.className = "mb-3";
-
-          const detailLabelitem = document.createElement("div");
-          detailLabelitem.className = "form-label";
-          detailLabelitem.textContent = column.name;
-
-          const inputElem = document.createElement("input");
-          inputElem.className = "form-control";
-          inputElem.dataset.editorid = column.id;
-          inputElem.value =
-            modalType == "edit" ? dataContext[column.field] : ""; // pre-filling in the edit mode;
-
-          formGroupElem.appendChild(detailLabelitem);
-          formGroupElem.appendChild(inputElem);
-
-          colElem.appendChild(formGroupElem);
-
-          currentRow.appendChild(colElem);
-        });
-
-        if (modalColumns.length % columnsPerShow !== 0) {
-          const remainingCols =
-            columnsPerShow - (modalColumns.length % columnsPerShow);
-          const spacerCol = document.createElement("div");
-          spacerCol.className = `col-lg-${remainingCols * 2}`; // adjust the spacer column
-          currentRow.appendChild(spacerCol);
-        }
-
-        modalElement.show();
-
-        // Save button logic
-        const saveBtn = document.querySelector(".modal-footer .btn-primary");
-        saveBtn.removeEventListener("click", saveHandler);
-        saveBtn.addEventListener("click", saveHandler);
-
-        // saveBtn.textContent = modalType === "create" ? "Create" : "Save changes";
-        function saveHandler() {
-          const formData = {};
-
-          // Collect form data
-          modalColumns.forEach((column) => {
-            const input = modalBodyElem.querySelector(
-              `[data-editorid="${column.id}"]`
-            );
-            if (input) {
-              formData[column.field] = input.value.trim();
-            }
-          });
-
-          if (modalType === "create") {
-            // Add new item to grid data
-            if (checkData(formData)) {
-              formData[unqId] = grid.getDataLength() + 1;
-              dataView.insertItem(grid.getDataLength(), formData);
-            } else {
-              alert("Please fill out all required fields.");
-              return;
-            }
-          } else if (modalType === "edit") {
-            // Update existing item in grid data
-            let isChanged = false;
-            for (let key in formData) {
-              if (formData[key] !== originalData[key]) {
-                isChanged = true;
-                break;
-              }
-            }
-
-            if (isChanged) {
-              formData[unqId] = originalData[unqId];
-              dataView.updateItem(originalData[unqId], formData);
-            } else {
-              alert("No changes detected.");
-              return;
-            }
-          }
-          grid.render();
-          modalElement.hide(); // Hide the modal after saving\
-        }
-
-        // Close button logic
-        const closeBtn = document.querySelector(".modal-footer .btn-link");
-        closeBtn.removeEventListener("click", closeHandler);
-        closeBtn.addEventListener("click", closeHandler);
-
-        function closeHandler() {
-          if (modalType === "edit" && originalData) {
-            dataView.updateItem(originalData[unqId], originalData);
-          }
-          modalElement.hide(); // we hide the modal
-        }
-      }
     </script>
   </th:block>
 </html>
