--- a/src/main/resources/templates/error/error_400.html
+++ b/src/main/resources/templates/error/error_400.html
@@ -36,7 +36,7 @@
     <link href="css/css-tabler/tabler-vendors.min.css?1726507346" rel="stylesheet">
     <link href="css/css-tabler/demo.min.css?1726507346" rel="stylesheet">
     <style>
-      @import url('https://rsms.me/inter/inter.css');
+      @import url('css/inter.css');
       :root {
       	--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
       }
