--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -23,7 +23,7 @@
 		<link href="css/file-css.css" rel="stylesheet" />
 		<link href="css/common-css.css" rel="stylesheet" />
 		
-	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" ></script>
+	    <script src="js/libs-tabler/bootstrap/dist/js/bootstrap.bundle.min.js" ></script>
 	    
 		<script src="js/jquery-3.7.1.min.js"></script>
 		<script src="js/jquery-ui.min.js"></script>
@@ -57,18 +57,16 @@
 		<!-- tabler library for making a select box -->
 		<script src="js/slickgrid/lib/select2.js?1692870487" defer></script>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-
 		<!-- litepicker library for making a datepicker -->
 		<script src="js/libs-tabler/nouislider/dist/nouislider.min.js?1692870487" defer></script>
 		<script src="js/libs-tabler/litepicker/dist/litepicker.js?1692870487" defer></script>
 		<script src="js/libs-tabler/tom-select/dist/js/tom-select.base.min.js?1692870487" defer></script>
 
 		<!-- chartjs library for making a charts --> 
-		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+		<script src="js/chart.js"></script>
 
 		<style>
-			@import url("https://rsms.me/inter/inter.css");
+			@import url("css/inter.css");
 			
 			:root {
 				--tblr-font-sans-serif: "Inter Var", -apple-system, BlinkMacSystemFont,
