--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,7 +23,7 @@
 		<link href="css/file-css.css" rel="stylesheet" />
 		
 	    <script
-     	 src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+     	 src="js/libs-tabler/bootstrap/dist/js/bootstrap.bundle.min.js"
     	></script>
 		<script src="js/jquery-3.7.1.min.js"></script>
 		<script src="js/jquery-ui.min.js"></script>
@@ -54,12 +54,12 @@
 		<script src="js/libs-tabler/jsvectormap/dist/maps/world-merc.js?1692870487" defer></script>
         <script src="js/utils.js" defer></script>
 
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="js/libs-tabler/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 		<link href="css/common-css.css" rel="stylesheet" />
 
 		<style>
-			@import url("https://rsms.me/inter/inter.css");
+			@import url("css/inter.css");
 			
 			:root {
 				--tblr-font-sans-serif: "Inter Var", -apple-system, BlinkMacSystemFont,
