--- a/src/main/resources/templates/subscription.html
+++ b/src/main/resources/templates/subscription.html
@@ -56,7 +56,7 @@
     <link href="css/common-css.css" rel="stylesheet" />
 
     <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/libs-tabler/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- jQuery and Other JS Dependencies -->
     <script src="js/jquery-3.7.1.min.js"></script>
