--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -12,7 +12,7 @@
 		<script src="js/common.js"></script>
     	<script src="js/utils.js"></script>
 		<style>
-			@import url('https://rsms.me/inter/inter.css');
+			@import url('css/inter.css');
 			:root {
 			--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
 			}
@@ -26,6 +26,7 @@
 					<span style="font-style: italic; font-size: 2em; font-family: Times New Roman; color: #0054a6;">i</span><span style="font-size: 2em; color: #0054a6;">Frame 2.0</span></span>
 				</div>
 			    <form class="card card-md" id="resetPasswordForm" name="resetPasswordForm" method="post" action="/auth/adamsFindPw" autocomplete="off" onsubmit="return false;">
+			    	<input type="hidden" th:name="${csrfParameterName}" th:value="${csrfToken}" />
 					<div class="card-body">
 						<h2 class="card-title text-center mb-4">Forgot password</h2>
 						<p class="text-secondary mb-4">Please submit your information. We will reset your password and send you a temporary password by e-mail.</p>
@@ -67,6 +68,7 @@
 		</div>
 		<form id="form" name="form" method="post" action="/menuLink">
 			<input type="hidden" id="pageName" name="pageName" />
+			<input type="hidden" th:name="${csrfParameterName}" th:value="${csrfToken}" />
 		</form>
 
 <script>
